--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
 <ul><li>contact</li>
             <ul><li><a href="/https:/www.linkedin.com/in/datanlnja/">linkedin</a></li><li><a href="/https:/github.com/datanlnja">github</a></li><li><a href="/https:/github.com/riggraz/no-style-please">facebook</a></li><li>cv</li></ul>
 <li>posts by category</li>
+    <ul><li>
+            <span>2020</span>
+            <a href="/posts/2020-07-06-strange-post/">ltv using sql and clickhouse</a>
+        </li>
+        
+    </ul>
+
 </ul>
 
 
