--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <p>I&rsquo;m Dmitry, I&rsquo;m engaged in data processing and analysis. I like to learn foreign languages. I live in Japan.</p>
 
 <ul><li>contact</li>
-            <ul><li><a href="https://www.linkedin.com/in/datanlnja/">linkedin</a></li><li><a href="https://github.com/datanlnja">github</a></li><li><a href="https://facebook.com/datanlnja">facebook</a></li><li><a href="posts/DMITRII_NOVIKOV_CV.pdf">cv</a></li></ul>
+            <ul><li><a href="https://www.linkedin.com/in/datanlnja/">linkedin</a></li><li><a href="https://github.com/datanlnja">github</a></li><li><a href="https://facebook.com/datanlnja">facebook</a></li><li><a href="DMITRII_NOVIKOV_CV.pdf">cv</a></li></ul>
 <li>posts by category</li>
     <ul><li>
             <span>2020</span>
