--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 <li>posts by category</li>
     <ul><li>
             <span>2020</span>
+            <a href="/posts/2022-07-06-clickhouse-json-change/">clikhouse: changing arrays to JSON</a>
+        </li>
+        <li>
+            <span>2020</span>
             <a href="/posts/2020-07-06-strange-post/">ltv using sql and clickhouse</a>
         </li>
         
