--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
 <ul><li>contact</li>
             <ul><li><a href="https://www.linkedin.com/in/datanlnja/">linkedin</a></li><li><a href="https://github.com/datanlnja">github</a></li><li><a href="https://facebook.com/datanlnja">facebook</a></li><li><a href="DMITRII_NOVIKOV_CV.pdf">cv</a></li></ul>
-<li>posts by category</li>
+<li>projects</li>
+            <ul><li><a href="https://stepik.org/course/99527/promo">The largest MOOC course in the Russian language focusing on Airflow.</a></li><li><a href="https://stepik.org/course/100210/promo">The MOOC course delves into ClickHouse, renowned as the world's fastest database system.</a></li></ul>
+<li>posts ...</li>
     <ul><li>
             <span>2020</span>
             <a href="/posts/2022-07-06-clickhouse-json-change/">clikhouse: changing arrays to JSON</a>
