--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <ul><li>contact</li>
             <ul><li><a href="https://www.linkedin.com/in/datanlnja/">linkedin</a></li><li><a href="https://github.com/datanlnja">github</a></li><li><a href="https://facebook.com/datanlnja">facebook</a></li><li><a href="DMITRII_NOVIKOV_CV.pdf">cv</a></li></ul>
 <li>projects</li>
-            <ul><li><a href="https://stepik.org/course/99527/promo">The largest MOOC course in the Russian language focusing on Airflow.</a></li><li><a href="https://stepik.org/course/100210/promo">The MOOC course delves into ClickHouse, renowned as the world's fastest database system.</a></li></ul>
+            <ul><li><a href="https://stepik.org/course/99527/promo">airflow: mooc course in the russian language.</a></li><li><a href="https://stepik.org/course/100210/promo">clickhouse: mooc course delves into ClickHouse</a></li></ul>
 <li>posts ...</li>
     <ul><li>
             <span>2020</span>
