--- a/index.html
+++ b/index.html
@@ -35,12 +35,24 @@
             <ul><li><a href="https://stepik.org/course/99527/promo">airflow: mooc course in the russian language.</a></li><li><a href="https://stepik.org/course/100210/promo">clickhouse: mooc course delves into ClickHouse</a></li></ul>
 <li>posts ...</li>
     <ul><li>
-            <span>2020</span>
+            <span>2021</span>
             <a href="/posts/2022-07-06-clickhouse-json-change/">clikhouse: changing arrays to JSON</a>
         </li>
         <li>
+            <span>2021</span>
+            <a href="/posts/2022-07-06-clickhouse-json-change-copy/">google colab in online education</a>
+        </li>
+        <li>
+            <span>2021</span>
+            <a href="/posts/2022-07-06-postgres/">postgres: tasks from postgres interviews</a>
+        </li>
+        <li>
             <span>2020</span>
-            <a href="/posts/2020-07-06-strange-post/">ltv using sql and clickhouse</a>
+            <a href="/posts/2020-07-06-strange-post/">clickhouse: ltv using sql and clickhouse</a>
+        </li>
+        <li>
+            <span>2020</span>
+            <a href="/posts/2022-07-06-pandas/">python: cooking pandas</a>
         </li>
         
     </ul>
